--- a/classification/CN_train_new_classifier.ipynb
+++ b/classification/CN_train_new_classifier.ipynb
@@ -70,9 +70,10 @@
     "           'cloud_thresh':0.9, # percentage of cloudy pixels accepted on the image\n",
     "           'cloud_mask_issue':True, # set to True if problems with the default cloud mask \n",
     "           'inputs':{'filepath':filepath_images}, # folder where the images are stored\n",
-    "           'labels':{'land_1':1, 'land_2':2, 'land_3':3, 'white-water':4, 'water':5}, # labels for the classifier\n",
-    "           'colors':{'land_1':[0.7,0.7,0.5], 'land_2':[0.8,0.8,0.5], 'land_3':[0.9,0.9,0.5],\n",
-    "                     'white-water':[1,0,1],'water':[0.1,0.1,0.7]},\n",
+    "           'labels':{'land_1':1, 'land_2':2, 'land_3':3,\n",
+    "                     'white-water':4, 'water':5, 'sand': 6}, # labels for the classifier\n",
+    "           'colors':{'land_1':[1, 0, 0], 'land_2':[0, 1, 0], 'land_3':[1, 1, 0],\n",
+    "                     'white-water':[1, 0, 1],'water':[0, 0.4, 1], 'sand': [1, 0.6, 0]},\n",
     "           'tolerance':0.02, # this is the pixel intensity tolerance, when using flood fill for sandy pixels\n",
     "                             # set to 0 to select one pixel at a time\n",
     "            }\n",
@@ -117,7 +118,7 @@
     "        inputs = {'polygon': roi_polygon, 'dates': date_pair, 'sat_list': ['S2'],\n",
     "                  'sitename': sitename, 'filepath': filepath_images, 'include_T2': False}\n",
     "\n",
-    "        metadata = NOC_download.retrieve_images(inputs)\n",
+    "        metadata = NOC_download.retrieve_training_images(inputs)\n",
     "\n",
     "print('***********************************************************')\n",
     "print(f'finished ...')\n",
@@ -153,7 +154,7 @@
     "    # load metadata\n",
     "    metadata = SDS_download.get_metadata(settings['inputs'])\n",
     "    # label images\n",
-    "    NOC_classify.label_images(metadata,settings)"
+    "    NOC_classify.label_images_6classes(metadata,settings)"
    ]
   },
   {
@@ -230,8 +231,8 @@
    "source": [
     "# subsample randomly the land and water classes\n",
     "# as the most important class is 'sand', the number of samples should be close to the number of sand pixels\n",
-    "n_samples = 1000\n",
-    "for key in ['water', 'white-water', 'land_1', 'land_2', 'land_3']:\n",
+    "n_samples = 530\n",
+    "for key in ['water', 'white-water', 'land_1', 'land_2', 'land_3', 'sand']:\n",
     "    features[key] =  features[key][np.random.choice(features[key].shape[0], n_samples, replace=True),:]\n",
     "# print classes again\n",
     "for key in features.keys():\n",
@@ -257,8 +258,8 @@
    "outputs": [],
    "source": [
     "# format into X (features) and y (labels) \n",
-    "classes = ['land_1','land_2','land_3','white-water','water']\n",
-    "labels = [1,2,3,4,5]\n",
+    "classes = ['land_1','land_2','land_3','white-water','water','sand']\n",
+    "labels = [1,2,3,4,5,6]\n",
     "X,y = SDS_classify.format_training_data(features, classes, labels)"
    ]
   },
@@ -329,7 +330,8 @@
     "%matplotlib inline\n",
     "y_pred = classifier.predict(X_test)\n",
     "SDS_classify.plot_confusion_matrix(y_test, y_pred,\n",
-    "                                   classes=['land_1', 'land_2', 'land_3', 'white-water', 'water'],\n",
+    "                                   classes=['land_1', 'land_2', 'land_3',\n",
+    "                                            'white-water', 'water','sand'],\n",
     "                                   normalize=False);"
    ]
   },
@@ -349,7 +351,7 @@
     "# train with all the data and save the final classifier\n",
     "classifier = MLPClassifier(hidden_layer_sizes=(100,50), solver='adam')\n",
     "classifier.fit(X,y)\n",
-    "joblib.dump(classifier, os.path.join(filepath_models, 'NN_5classes_S2.pkl'))"
+    "joblib.dump(classifier, os.path.join(filepath_models, 'NN_6classes_S2.pkl'))"
    ]
   },
   {
@@ -369,11 +371,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from coastsat import NOC_classify\n",
+    "from coastsat import NOC_classify, NOC_shoreline\n",
     "# load and evaluate a classifier\n",
     "%matplotlib qt\n",
-    "classifier = joblib.load(os.path.join(filepath_models, 'NN_5classes_S2.pkl'))\n",
-    "settings['output_epsg'] = 3857\n",
+    "classifier = joblib.load(os.path.join(filepath_models, 'NN_6classes_S2.pkl'))\n",
+    "settings['output_epsg'] = 32620\n",
     "settings['min_beach_area'] = 4500\n",
     "settings['buffer_size'] = 200\n",
     "settings['min_length_sl'] = 200\n",
@@ -385,7 +387,16 @@
     "    metadata = SDS_download.get_metadata(settings['inputs'])\n",
     "    \n",
     "    # plot the classified images\n",
-    "    NOC_classify.evaluate_classifier(classifier, metadata, settings, base_filepath)"
+    "    NOC_classify.evaluate_classifier_6classes(classifier, metadata, settings, base_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath_models"
    ]
   },
   {
