--- a/classification/CN_download_training_data.ipynb
+++ b/classification/CN_download_training_data.ipynb
@@ -28,12 +28,17 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "import numpy as np\n",
     "import pickle\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
-    "from coastsat import SDS_download, SDS_preprocess, SDS_shoreline, SDS_tools, SDS_transects\n",
+    "\n",
+    "# coastsat modules\n",
+    "sys.path.insert(0, os.pardir)\n",
+    "from coastsat import SDS_download, SDS_preprocess, SDS_shoreline, SDS_tools, SDS_transects, \\\n",
+    "    NOC_tools, NOC_download\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
@@ -70,7 +75,7 @@
     "    print()\n",
     "    \n",
     "    kml_filepath = os.path.join(sites_dir_path, roi_kml)\n",
-    "    kml_polygon = SDS_tools.polygon_from_kml(kml_filepath)\n",
+    "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
     "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
     "\n",
     "        \n",
@@ -89,7 +94,7 @@
     "        inputs = {'polygon': roi_polygon, 'dates': date_pair, 'sat_list': ['S2'],\n",
     "                  'sitename': sitename, 'filepath': training_dir_path, 'include_T2': False}\n",
     "\n",
-    "        metadata = SDS_download.retrieve_training_images(inputs)\n",
+    "        metadata = NOC_download.retrieve_training_images(inputs)\n",
     "\n",
     "print('***********************************************************')\n",
     "print(f'finished ...')\n",
