--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing: IndianBay\n"
+     ]
+    }
+   ],
    "source": [
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
@@ -118,7 +126,7 @@
    "outputs": [],
    "source": [
     "    ## download median images\n",
-    " #   metadata = NOC_download.retrieve_median_image(settings)\n",
+    "    metadata = NOC_download.retrieve_median_image(settings)\n",
     " #   metadata = SDS_download.get_metadata(inputs)\n",
     "    \n",
     "    print('finished ...')"
