--- a/classification/CN_train_new_classifier.ipynb
+++ b/classification/CN_train_new_classifier.ipynb
@@ -76,7 +76,12 @@
     "                     'white-water':[1, 0, 1],'water':[0, 0.4, 1], 'sand': [1, 0.6, 0]},\n",
     "           'tolerance':0.02, # this is the pixel intensity tolerance, when using flood fill for sandy pixels\n",
     "                             # set to 0 to select one pixel at a time\n",
-    "            }\n",
+    "           \n",
+    "            # labels for classes for the classifier and colours for display\n",
+    "           'classes':{'land_1': [1, [1, 0, 0]], 'land_2': [2, [0, 1, 0]],\n",
+    "                      'land_3': [3, [1, 1, 0]], 'white-water': [4, [1, 0, 1]],\n",
+    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]},\n",
+    "          }\n",
     "        \n",
     "# read kml files for the training sites\n",
     "filepath_sites = os.path.join(base_filepath, 'training_sites')\n",
@@ -108,7 +113,7 @@
     "                 ['2020-07-01', '2020-07-31'],['2020-08-01', '2020-08-31'],['2020-09-01', '2020-09-30'],\n",
     "                 ['2020-10-01', '2020-10-31'],['2020-11-01', '2020-11-30'],['2020-12-01', '2020-12-31']]\n",
     "    \n",
-    "    all_dates = [['2020-01-01', '2020-12-31']]\n",
+    "    all_dates = [['2018-01-01', '2020-12-31']]\n",
     "    \n",
     "    for date_pair in all_dates:\n",
     "        \n",
@@ -118,7 +123,8 @@
     "        inputs = {'polygon': roi_polygon, 'dates': date_pair, 'sat_list': ['S2'],\n",
     "                  'sitename': sitename, 'filepath': filepath_images, 'include_T2': False}\n",
     "\n",
-    "        metadata = NOC_download.retrieve_training_images(inputs)\n",
+    "        #metadata = NOC_download.retrieve_training_images(inputs)\n",
+    "        metadata = NOC_download.get_metadata(inputs)\n",
     "\n",
     "print('***********************************************************')\n",
     "print(f'finished ...')\n",
@@ -231,7 +237,7 @@
    "source": [
     "# subsample randomly the land and water classes\n",
     "# as the most important class is 'sand', the number of samples should be close to the number of sand pixels\n",
-    "n_samples = 530\n",
+    "n_samples = 2500\n",
     "for key in ['water', 'white-water', 'land_1', 'land_2', 'land_3', 'sand']:\n",
     "    features[key] =  features[key][np.random.choice(features[key].shape[0], n_samples, replace=True),:]\n",
     "# print classes again\n",
@@ -371,7 +377,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from coastsat import NOC_classify, NOC_shoreline\n",
     "# load and evaluate a classifier\n",
     "%matplotlib qt\n",
     "classifier = joblib.load(os.path.join(filepath_models, 'NN_6classes_S2.pkl'))\n",
@@ -388,15 +393,6 @@
     "    \n",
     "    # plot the classified images\n",
     "    NOC_classify.evaluate_classifier_6classes(classifier, metadata, settings, base_filepath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filepath_models"
    ]
   },
   {
