--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -54,7 +54,12 @@
     "\n",
     "            'reference_shoreline': True,\n",
     "            'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
-    "          \n",
+    "   \n",
+    "           # labels for classes for the classifier and colours for display\n",
+    "           'classes':{'hard': [1, [1, 0, 0]], 'nature': [2, [0, 1, 0]],\n",
+    "                      'urban': [3, [1, 1, 0]], 'white-water': [4, [1, 0, 1]],\n",
+    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},\n",
+    "                                                          \n",
     "          }"
    ]
   },
@@ -85,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing: IndianBay\n"
+      "Processing: WeymouthTraining\n"
      ]
     }
    ],
@@ -101,7 +106,7 @@
     "\n",
     "sat_name = 'S2'\n",
     "\n",
-    "dates = ['2020-01-01', '2020-12-31']\n",
+    "dates = ['2020-01-01', '2020-01-10']\n",
     "\n",
     "for site in sites:\n",
     "\n",
@@ -121,22 +126,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "    ## download median images\n",
-    "    metadata = NOC_download.retrieve_median_image(settings)\n",
-    " #   metadata = SDS_download.get_metadata(inputs)\n",
+    "#    metadata = NOC_download.retrieve_median_optical(settings)\n",
     "    \n",
     "    print('finished ...')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'S2': {'filenames': ['2020-01-01-00-00-00_S2_WeymouthTraining_median_10m.tif'], 'acc_georef': [1.0], 'epsg': [4326], 'dates': [datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>)], 'median_no': [71]}}\n"
+     ]
+    }
+   ],
    "source": [
     "    ## load saved metadata\n",
     "    metadata = NOC_download.get_metadata(settings['inputs'])\n",
@@ -146,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference shoreline already exists and was loaded\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt\n",
     "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
@@ -166,23 +194,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S2 extracting shorelines for: 1 images\n",
+      "\n",
+      "\n",
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "    %matplotlib qt\n",
     "    \n",
     "    ##Batch shoreline detection\n",
-    "    output = NOC_shoreline.extract_shorelines(metadata, settings)\n",
+    "    output = NOC_shoreline.extract_shorelines_optical(metadata, settings)\n",
     "    \n",
     "    print('finished ...')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 duplicates\n",
+      "0 bad georef\n"
+     ]
+    }
+   ],
    "source": [
     "output = SDS_tools.remove_duplicates(output) # removes duplicates (images taken on the same date by the same satellite)\n",
     "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)"
@@ -190,9 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['dates', 'shorelines', 'filename', 'cloud_cover', 'geoaccuracy', 'idx', 'median_no', 'satname'])\n",
+      "[datetime.datetime(2020, 1, 1, 0, 0, tzinfo=<UTC>)]\n"
+     ]
+    }
+   ],
    "source": [
     "print(output.keys())\n",
     "print(output['dates'])"
@@ -200,9 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished ...\n"
+     ]
+    }
+   ],
    "source": [
     "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
     "\n",
@@ -222,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
