SAR reference shorelines

--- a/CN_shoreline.ipynb
+++ b/CN_shoreline.ipynb
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "    ## load saved metadata\n",
-    "    metadata = NOC_download.get_metadata(settings['inputs'])\n",
+    "    metadata = NOC_download.get_metadata(inputs)\n",
     "    \n",
     "    print(metadata)"
    ]
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SDS_preprocess.save_jpg(metadata, settings)"
+    "SDS_preprocess.save_jpg(metadata, settings)"
    ]
   },
   {
@@ -156,8 +156,7 @@
    "outputs": [],
    "source": [
     "%matplotlib qt\n",
-    "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
-    "settings['max_dist_ref'] = 100 # max distance (in meters) allowed from the reference shoreline"
+    "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)"
    ]
   },
   {
