--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -33,12 +33,12 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
-    "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
+    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={'output_epsg': 32620,\n",
     "           'reference_shoreline': True,\n",
-    "           'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
+    "           'max_dist_ref': 200,        # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_sl': 200,       # min length (in meters) for shorelines\n",
     "          }"
    ]
@@ -72,7 +72,7 @@
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
     "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10,\n",
-    "              'polarisation': 'VH'}\n",
+    "              'polarisation': 'VH', 'sigma': 0}\n",
     "    \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
@@ -87,7 +87,7 @@
    "source": [
     "    #metadata = NOC_download.retrieve_median_sar(inputs)\n",
     "    ## load saved metadata\n",
-    "    metadata = NOC_download.get_metadata(settings['inputs'])\n",
+    "    metadata = NOC_download.get_metadata(inputs)\n",
     "    \n",
     "    print(metadata)\n",
     "    print('finished ...')"
@@ -99,18 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SDS_preprocess.save_jpg(metadata, settings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt\n",
-    "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)\n",
-    "settings['max_dist_ref'] = 100 # max distance (in meters) allowed from the reference shoreline"
+    "    settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline(inputs)"
    ]
   },
   {
@@ -122,7 +111,7 @@
     "    %matplotlib qt\n",
     "    \n",
     "    ##Batch shoreline detection\n",
-    "    output = NOC_shoreline.extract_sar_shorelines(metadata, settings)\n",
+    "    output = NOC_shoreline.extract_shorelines_sar(metadata, settings)\n",
     "    \n",
     "    print('finished ...')"
    ]
