--- a/classification/CN_train_new_classifier.ipynb
+++ b/classification/CN_train_new_classifier.ipynb
@@ -80,7 +80,7 @@
     "            # labels for classes for the classifier and colours for display\n",
     "           'classes':{'land_1': [1, [1, 0, 0]], 'land_2': [2, [0, 1, 0]],\n",
     "                      'land_3': [3, [1, 1, 0]], 'white-water': [4, [1, 0, 1]],\n",
-    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]},\n",
+    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},\n",
     "          }\n",
     "        \n",
     "# read kml files for the training sites\n",
