--- a/classification/CN_train_new_classifier.ipynb
+++ b/classification/CN_train_new_classifier.ipynb
@@ -18,14 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "code_folding": [],
     "run_control": {
      "marked": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Sites for training:\n",
+      "['ArgyleAirportTraining.kml', 'IndianBayTraining.kml', 'SaltWihistBayTraining.kml', 'WeymouthTraining.kml']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# load modules\n",
     "%load_ext autoreload\n",
@@ -58,12 +70,14 @@
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
     "country = 'STV'\n",
-    "base_filepath = os.path.join(dataPartition, country, 'classification')  \n",
+    "evaluation_filepath = os.path.join(dataPartition, country)  \n",
+    "classification_filepath = os.getcwd()\n",
     "\n",
     "# filepaths \n",
-    "filepath_images = os.path.join(base_filepath, 'data')\n",
-    "filepath_train = os.path.join(base_filepath, 'training_data')\n",
-    "filepath_models = os.path.join(base_filepath, 'models')\n",
+    "filepath_images = os.path.join(classification_filepath, 'data')\n",
+    "filepath_train = os.path.join(classification_filepath, 'training_data')\n",
+    "filepath_models = os.path.join(classification_filepath, 'models')\n",
+    "filepath_training_sites = os.path.join(classification_filepath, 'training_sites')\n",
     "\n",
     "# settings\n",
     "settings ={'filepath_train':filepath_train, # folder where the labelled images will be stored\n",
@@ -84,16 +98,41 @@
     "          }\n",
     "        \n",
     "# read kml files for the training sites\n",
-    "filepath_sites = os.path.join(base_filepath, 'training_sites')\n",
-    "train_sites = os.listdir(filepath_sites)\n",
+    "train_sites = os.listdir(filepath_training_sites)\n",
     "print('Sites for training:\\n%s\\n'%train_sites)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***********************************************************\n",
+      "processing roi: ArgyleAirportTraining\n",
+      "\n",
+      "    from 2018-01-01 to 2020-12-31\n",
+      "***********************************************************\n",
+      "processing roi: IndianBayTraining\n",
+      "\n",
+      "    from 2018-01-01 to 2020-12-31\n",
+      "***********************************************************\n",
+      "processing roi: SaltWihistBayTraining\n",
+      "\n",
+      "    from 2018-01-01 to 2020-12-31\n",
+      "***********************************************************\n",
+      "processing roi: WeymouthTraining\n",
+      "\n",
+      "    from 2018-01-01 to 2020-12-31\n",
+      "***********************************************************\n",
+      "finished ...\n",
+      "***********************************************************\n"
+     ]
+    }
+   ],
    "source": [
     "for roi_kml in train_sites:\n",
     "    \n",
@@ -103,7 +142,7 @@
     "    print(f'processing roi: {sitename}')\n",
     "    print()\n",
     "    \n",
-    "    kml_filepath = os.path.join(filepath_sites, roi_kml)\n",
+    "    kml_filepath = os.path.join(filepath_training_sites, roi_kml)\n",
     "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
     "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
     "\n",
@@ -124,7 +163,7 @@
     "                  'sitename': sitename, 'filepath': filepath_images, 'include_T2': False}\n",
     "\n",
     "        #metadata = NOC_download.retrieve_training_images(inputs)\n",
-    "        metadata = NOC_download.get_metadata(inputs)\n",
+    "        metadata = SDS_download.get_metadata(inputs)\n",
     "\n",
     "print('***********************************************************')\n",
     "print(f'finished ...')\n",
@@ -373,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +431,7 @@
     "    metadata = SDS_download.get_metadata(settings['inputs'])\n",
     "    \n",
     "    # plot the classified images\n",
-    "    NOC_classify.evaluate_classifier_6classes(classifier, metadata, settings, base_filepath)"
+    "    NOC_classify.evaluate_classifier(classifier, metadata, settings, classification_filepath)"
    ]
   },
   {
