--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,29 +33,59 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
-    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess,\\\n",
+    "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32737,\n",
-    "           'reference_shoreline': True,\n",
-    "           'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
-    "           'min_length_sl': 500,       # min length (in meters) for shorelines\n",
+    "settings ={'cloud_thresh':0.9,\n",
+    "           'output_epsg': 32737,\n",
+    "           \n",
+    "            # [ONLY FOR ADVANCED USERS] shoreline detection parameters:\n",
+    "            'min_beach_area': 4500,     # minimum area (in metres^2) for an object to be labelled as a beach\n",
+    "            'buffer_size': 150,         # radius (in metres) for buffer around sandy pixels considered in the shoreline detection\n",
+    "            'min_length_sl': 200,       # minimum length (in metres) of shoreline perimeter to be valid\n",
+    "            'cloud_mask_issue': False,  # switch this parameter to True if sand pixels are masked (in black) on many images  \n",
+    "    \n",
+    "            # Sentinel\n",
+    "            'CLOUD_FILTER': 50,         # [Integer] Maximum image cloud cover percent allowed in image collection'\n",
+    "            'CLD_PRB_THRESH': 25,       # {Integer] Cloud probability (%); values greater than are considered cloud\n",
+    "            'NIR_DRK_THRESH': 0.08,     # [Float] Near-infrared reflectance; values less than are considered potential cloud shadow\n",
+    "            'CLD_PRJ_DIST': 2,          # [Float] Maximum distance (km) to search for cloud shadows from cloud edges |\n",
+    "            'BUFFER': 50,               # [Integer] Distance (m) to dilate the edge of cloud-identified objects |\n",
+    "\n",
+    "            'reference_shoreline': True,\n",
+    "            'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
+    "   \n",
+    "           # labels for classes for the classifier and colours for display\n",
+    "           'classes':{'hard': [1, [1, 0, 0]], 'nature': [2, [0, 1, 0]],\n",
+    "                      'urban': [3, [1, 1, 0]], 'white-water': [4, [1, 0, 1]],\n",
+    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},\n",
+    "                                                          \n",
     "          }"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing: Watamu\n"
-     ]
-    }
-   ],
+   "source": [
+    "## 1. Retrieval of the images from GEE\n",
+    "\n",
+    "To retrieve from the GEE server the available satellite images cropped around the user-defined region of coastline for the particular time period of interest, the following variables are required:\n",
+    "\n",
+    "* Coordinate list: a list of the coordinates of the region of interest (longitude/latitude pairs in WGS84) – see section 'create coordinate list in User handbook to extract ROI from study site\n",
+    "* all_dates: dates over which the images will be retrieved (e.g., dates = ['2017-12-01', '2018-01-01'])\n",
+    "* all_sats: satellite missions to consider (e.g., sat_list = ['L7', 'L8', 'S2'] for Landsat 7, 8 and Sentinel-2 collections)\n",
+    "* sitename: name of the site (this is the name of the subfolder where the images and other accompanying files will be stored)\n",
+    "\n",
+    "Similar to coastsat, there are some extra parameters such as those to go through manual checking, whether to combine Landsat collections and cloud thresholds.\n",
+    "\n",
+    "Make sure the area of your ROI is smaller than 100 km2 (if larger split it into smaller ROIs) - GEE limits download size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
@@ -66,7 +96,7 @@
     "filepath_sites = os.path.join(base_filepath, 'sites')\n",
     "sites = os.listdir(filepath_sites)\n",
     "\n",
-    "sat_name = 'S1'\n",
+    "sat_name = 'S2'\n",
     "\n",
     "dates = ['2020-01-01', '2020-06-30']\n",
     "\n",
@@ -79,8 +109,7 @@
     "    sitename = site[:site.find('.')]\n",
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
-    "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10,\n",
-    "              'polarisation': 'VH', 'sigma': 5}\n",
+    "              'sitename': sitename, 'filepath': base_filepath}\n",
     "    \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
@@ -89,19 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "    #metadata = NOC_download.retrieve_median_sar(inputs)\n",
+    "    ## download median images\n",
+    "    metadata = NOC_download.retrieve_median_optical(settings)\n",
+    "    \n",
+    "    print('finished ...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    ## load saved metadata\n",
     "    metadata = NOC_download.get_metadata(inputs)\n",
     "    \n",
@@ -110,34 +142,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline(inputs)"
+    "SDS_preprocess.save_jpg(metadata, settings)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mapping shorelines:\n",
-      "\r",
-      "S1:   100%\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "%matplotlib qt\n",
+    "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "    %matplotlib qt\n",
     "    \n",
     "    ##Batch shoreline detection\n",
-    "    output = NOC_shoreline.extract_shorelines_sar(metadata, settings)\n",
+    "    output = NOC_shoreline.extract_shorelines_optical(metadata, settings)\n",
     "    \n",
     "    print('finished ...')"
    ]
@@ -158,10 +189,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(output.keys())\n",
+    "print(output['dates'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
     "\n",
     "satname = output['satname'][0]\n",
-    "file_string = f'{sitename}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
+    "file_string = f'{sitename}_shorelines_{satname}.geojson'\n",
     "\n",
     "if  ~gdf.empty:\n",
     "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
@@ -169,7 +210,7 @@
     "    gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
     "                             file_string),\n",
     "                             driver='GeoJSON', encoding='utf-8')\n",
-    "    print(f'written: {file_string}')\n",
+    "    print('finished ...')\n",
     "else:\n",
     "    print('no shorelines to be seen ...')"
    ]
@@ -179,7 +220,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = plt.figure(figsize=[15,8])\n",
+    "plt.axis('equal')\n",
+    "plt.xlabel('Eastings')\n",
+    "plt.ylabel('Northings')\n",
+    "plt.grid(linestyle=':', color='0.5')\n",
+    "for i in range(len(output['shorelines'])):\n",
+    "    sl = output['shorelines'][i]\n",
+    "    date = output['dates'][i]\n",
+    "    plt.plot(sl[:,0], sl[:,1], '.', label=date.strftime('%d-%m-%Y'))\n",
+    "plt.legend();"
+   ]
   },
   {
    "cell_type": "code",
