refactored classification plus

--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -36,8 +36,9 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'cloud_thresh':0.9,\n",
-    "           'output_epsg': 32737,\n",
+    "settings ={'output_epsg': 32730,\n",
+    "           \n",
+    "           'cloud_thresh':0.9,\n",
     "           \n",
     "            # [ONLY FOR ADVANCED USERS] shoreline detection parameters:\n",
     "            'min_beach_area': 4500,     # minimum area (in metres^2) for an object to be labelled as a beach\n",
@@ -58,8 +59,7 @@
     "           # labels for classes for the classifier and colours for display\n",
     "           'classes':{'hard': [1, [1, 0, 0]], 'nature': [2, [0, 1, 0]],\n",
     "                      'urban': [3, [1, 1, 0]], 'white-water': [4, [1, 0, 1]],\n",
-    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},\n",
-    "                                                          \n",
+    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},                                             \n",
     "          }"
    ]
   },
@@ -89,7 +89,7 @@
    "source": [
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'kenya'\n",
+    "country = 'UK'\n",
     "base_filepath = os.path.join(dataPartition, country)  \n",
     "\n",
     "# filepaths etc\n",
