--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# directory where the data will be accessed and stored\n",
     "dataPartition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'kenya'\n",
+    "country = 'UK'\n",
     "base_filepath = os.path.join(dataPartition, country)  \n",
     "\n",
     "# filepaths etc\n",
@@ -72,11 +72,11 @@
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
     "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10,\n",
-    "              'polarisation': 'VH', 'sigma': 5}\n",
+    "              'polarisation': 'VH', 'sigma': 0}\n",
     "    \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
-    "    print(f'Processing: {sitename}')"
+    "    print(f'processing: {sitename}')"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    #metadata = NOC_download.retrieve_median_sar(inputs)\n",
+    "    metadata = NOC_download.retrieve_median_sar(inputs)\n",
     "    ## load saved metadata\n",
     "    metadata = NOC_download.get_metadata(inputs)\n",
     "    \n",
