--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -36,10 +36,10 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32630,\n",
-    "           'reference_shoreline': True,\n",
-    "           'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
-    "           'min_length_sl': 500,       # min length (in meters) for shorelines\n",
+    "settings ={\n",
+    "           'output_epsg': 32630,\n",
+    "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
+    "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
     "          }"
    ]
   },
@@ -72,8 +72,8 @@
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
     "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10,\n",
-    "              'polarisation': 'VH', 'sigma': 0}\n",
-    "    \n",
+    "              'polarisation': 'VH', 'sigma': 5, 'reference_shoreline': False}\n",
+    "               \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
     "    print(f'processing: {sitename}')"
